[package]
name = "bevy_bump"
version = "0.1.0"
edition = "2021"

[features]
default = ["enumset_layer"]
enumset_layer = ["enumset"]
serde = ["dep:serde"]

[dependencies]
bevy = "0.13"
plane-2d = "0.1.4"
iter-n = "0.1.0"
indexmap = "2.2"
enumset = { version = "1.1.3", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
