[package]
name = "bevy_bump"
version = "0.1.0"
edition = "2021"

[features]
default = ["enumset_layer"]
enumset_layer = ["enumset"]
serde = ["dep:serde", "plane-2d/serde"]

[dependencies]
bevy = "0.14"
plane-2d = { version = "0.1.6", features = ["bevy_reflect", "hashbrown"] }
iter-n = "0.1.0"
replace_with = "0.1.7"
enumset = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
